--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,9 @@
+version: '3'
 services:
   mysql:
     image: mysql:8.0
+    ports:
+      - "3306:3306"
     environment:
       MYSQL_ROOT_PASSWORD: P@ssw0rd
       MYSQL_USER: product_user
@@ -16,9 +19,9 @@ services:
       depends_on:
         - mysql
       environment:
-        SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/product  # Use service name as hostname
-        SPRING_DATASOURCE_USERNAME: aditya
-        SPRING_DATASOURCE_PASSWORD: test
+        SPRING_DATASOURCE_URL: jdbc:mysql://mysql:3306/product
+        SPRING_DATASOURCE_USERNAME: product_user
+        SPRING_DATASOURCE_PASSWORD: product_user_password
 
   react-app:
       build:
